# Banking_Pipeline

./: .gitignore  Banking_ER_Diagram.drawio  Docker-compose.yml  README.md  pyproject.toml
Backend/: __init__.py  app.py
Backend/config/: __init__.py  db.py
Backend/router/: __init__.py  bank.py
Backend/utils/: __init__.py  db_schema.py  rate_limit.py
Bronze/: __init__.py  accounts_into_s3.py  api_to_s3.py  branches_into_s3.py  cards_into_s3.py  customers_into_s3.py  products_int_s3.py  transactions_to_s3.py  utils.py
Bronze/Orchestration/: pipeline.py
sql/: ddl.sql  insert.sql
