[project]
name = "de-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "boto3>=1.43.11",
    "fastapi[standard]>=0.136.1",
    "pandas>=3.0.3",
    "polars>=1.40.1",
    "psycopg2>=2.9.12",
    "pydantic>=2.13.4",
    "requests>=2.34.2",
    "slowapi>=0.1.9",
]
